[package]
name = "onebuck"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/splurf/onebuck"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "An efficient unordered dynamically-sized data structure."
keywords = ["efficient", "fast", "lightweight", "unordered", "dynamic"]
categories = ["data-structures"]
exclude = [".github/", ".gitignore", "LICENSE", "README.md"]

[features]
default = ["get"]
get = []

[profile.release]
lto = true
codegen-units = 1
